--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,6 +17,7 @@
   flex-direction: row;
   align-items: center;
   gap: 1.5rem;
+  width: 100%;
 }
 
 .greystar-logo {
@@ -31,6 +32,8 @@
   font-size: 2rem;
   font-family: var(--font-sans);
   font-weight: 600;
+  flex-grow: 1;
+  text-align: center;
 }
 
 .filters {
